docs: document CI, upstream sync, and line-ending hygiene